Fix description truncate

--- a/src/styles/job-detail.css
+++ b/src/styles/job-detail.css
@@ -1,6 +1,7 @@
 .-fixed {
   position: fixed !important;
   top: 10px;
+  margin-bottom: 10px;
 }
 
 .-relative {
